<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright 2024 Google LLC

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activityChooseGestureLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    tools:context=".GestureSizeActivity">

    <Button
        android:id="@+id/nextBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/round_button"
        android:text="@string/button_next"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/round_button_w"
        android:text="@string/button_back"
        android:textAllCaps="false"
        android:textColor="#1967d2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/actionDescriptionText"
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="40dp"
        android:lines="2"
        android:text="@string/choose_gesture_desc"
        android:textColor="#7A7A7A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="6dp"
        app:layout_constraintBottom_toTopOf="@+id/nextBtn"
        app:layout_constraintTop_toBottomOf="@id/actionDescriptionText"
        tools:context=".ChooseGestureActivity"
        tools:layout_editor_absoluteX="20dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/gestureConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="30dp">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/gestureLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:id="@+id/openMouth"
                    android:layout_width="144dp"
                    android:layout_height="134dp"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/gesture_button"
                    android:gravity="center_vertical|center_horizontal"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toStartOf="@+id/mouthLeft"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/openMouthImg"
                        android:layout_width="76dp"
                        android:layout_height="76dp"
                        android:src="@drawable/open_mouth" />

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tag="text_view_gesture_name"
                        android:text="@string/gesture_open_mouth"
                        android:textColor="#0B57D0"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/mouthLeft"
                    android:layout_width="144dp"
                    android:layout_height="134dp"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/gesture_button"
                    android:gravity="center_vertical|center_horizontal"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/openMouth"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:layout_width="76dp"
                        android:layout_height="76dp"
                        android:src="@drawable/mouth_left" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tag="text_view_gesture_name"
                        android:text="@string/gesture_mouth_left"
                        android:textColor="#0B57D0"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/mouthRight"
                    android:layout_width="144dp"
                    android:layout_height="134dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/gesture_button"
                    android:gravity="center_vertical|center_horizontal"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toStartOf="@+id/rollLowerMouth"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/openMouth">

                    <ImageView
                        android:layout_width="76dp"
                        android:layout_height="76dp"
                        android:src="@drawable/mouth_right" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tag="text_view_gesture_name"
                        android:text="@string/gesture_mouth_right"
                        android:textColor="#0B57D0"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/rollLowerMouth"
                    android:layout_width="144dp"
                    android:layout_height="134dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/gesture_button"
                    android:gravity="center_vertical|center_horizontal"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/mouthRight"
                    app:layout_constraintTop_toBottomOf="@+id/openMouth">

                    <ImageView
                        android:layout_width="76dp"
                        android:layout_height="76dp"
                        android:src="@drawable/roll_lower_mouth" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tag="text_view_gesture_name"
                        android:text="@string/gesture_roll_lower_mouth"
                        android:textColor="#0B57D0"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/raiseRightEyebrow"
                    android:layout_width="144dp"
                    android:layout_height="134dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/gesture_button"
                    android:gravity="center_vertical|center_horizontal"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toStartOf="@+id/raiseLeftEyebrow"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/mouthRight">

                    <ImageView
                        android:layout_width="76dp"
                        android:layout_height="76dp"
                        android:src="@drawable/raise_right_eyebrow" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tag="text_view_gesture_name"
                        android:text="@string/gesture_raise_right_eyebrow"
                        android:textColor="#0B57D0"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/raiseLeftEyebrow"
                    android:layout_width="144dp"
                    android:layout_height="134dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/gesture_button"
                    android:gravity="center_vertical|center_horizontal"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/raiseRightEyebrow"
                    app:layout_constraintTop_toBottomOf="@+id/mouthRight">

                    <ImageView
                        android:layout_width="76dp"
                        android:layout_height="76dp"
                        android:src="@drawable/raise_left_eyebrow" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tag="text_view_gesture_name"
                        android:text="@string/gesture_raise_left_eyebrow"
                        android:textColor="#0B57D0"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lowerRightEyebrow"
                    android:layout_width="144dp"
                    android:layout_height="134dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/gesture_button"
                    android:gravity="center_vertical|center_horizontal"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toStartOf="@+id/lowerLeftEyebrow"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/raiseRightEyebrow">

                    <ImageView
                        android:layout_width="76dp"
                        android:layout_height="76dp"
                        android:src="@drawable/lower_right_eyebrow" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tag="text_view_gesture_name"
                        android:text="@string/gesture_lower_right_eyebrow"
                        android:textColor="#0B57D0"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lowerLeftEyebrow"
                    android:layout_width="144dp"
                    android:layout_height="134dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/gesture_button"
                    android:gravity="center_vertical|center_horizontal"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/lowerRightEyebrow"
                    app:layout_constraintTop_toBottomOf="@+id/raiseRightEyebrow">

                    <ImageView
                        android:layout_width="76dp"
                        android:layout_height="76dp"
                        android:src="@drawable/lower_left_eyebrow" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tag="text_view_gesture_name"
                        android:text="@string/gesture_lower_left_eyebrow"
                        android:textColor="#0B57D0"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/none"
                    android:layout_width="144dp"
                    android:layout_height="134dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/gesture_button"
                    android:gravity="center_vertical|center_horizontal"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toStartOf="@+id/temp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/lowerRightEyebrow">

                    <ImageView
                        android:layout_width="76dp"
                        android:layout_height="76dp"
                        android:src="@drawable/none" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tag="text_view_gesture_name"
                        android:text="@string/gesture_none"
                        android:textColor="#0B57D0"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/temp"
                    android:layout_width="144dp"
                    android:layout_height="134dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/gesture_button"
                    android:gravity="center_vertical|center_horizontal"
                    android:orientation="vertical"
                    android:visibility="invisible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/none"
                    app:layout_constraintTop_toBottomOf="@+id/lowerRightEyebrow" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>

